--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nodejs study",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha $(find ./ -name '*.js') --recursive -w"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,13 @@
   "homepage": "https://github.com/1taeyongkim1/nodejs#readme",
   "dependencies": {
     "babel-core": "^6.26.3",
-    "http": "0.0.1-security"
+    "chai": "^4.3.4",
+    "http": "0.0.1-security",
+    "nightwatch": "^1.6.3",
+    "request": "^2.88.2",
+    "requests": "^0.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.3.2"
   }
 }
