--- a/mocha_pro2/package.json
+++ b/mocha_pro2/package.json
@@ -13,5 +13,8 @@
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
     "suite": "^0.2.0"
+  },
+  "devDependencies": {
+    "chromedriver": "^90.0.0"
   }
 }
