--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "http": "0.0.1-security",
     "nightwatch": "^1.6.3",
     "request": "^2.88.2",
-    "requests": "^0.3.0"
+    "requests": "^0.3.0",
+    "selenium-webdriver": "^4.0.0-beta.3"
   },
   "devDependencies": {
+    "chromedriver": "^90.0.0",
     "mocha": "^8.3.2"
   }
 }
